# graphics_drawing_algorithms

assignment1/: assignment1.depend  assignment1.layout  main.cpp
lab1/: lab1.cbp  lab1.layout  main.cpp
lab1 (direct line darwing algorithm)/: lab1.depend
lab2/: lab2.layout  main.cpp
lab2 (bresenham's line drawing algorithm)/: lab2.cbp  lab2.layout
lab2 (bresman's line drawing algorithm)/: main.cpp
lab3/: lab3.depend  lab3.layout
lab3 (drawing a triangle using bresenham's line)/: main.cpp
lab3 (drawing a triangle using bresman's line)/: lab3.cbp
lab4/: lab4.cbp  lab4.layout
lab4 (bresenham's circle drawing algorithm)/: lab4.depend  main.cpp
lab4 (direct circle drawing algorithm)/: main.cpp
lab5 (curves)/: curves.cbp  curves.layout  main.cpp
lab5 (hermite's curve drawing algorithm)/: lab5.cbp  lab5.depend  main.cpp
lab6 (line clipping)/: lab 6 (line clipping).cbp  lab 6 (line clipping).depend  lab 6 (line clipping).layout  main.cpp
lab7 (convex filling)/: lab 7 (convex filling).cbp  lab 7 (convex filling).depend  main.cpp
project_2d_package/: CMakeLists.txt  circlealgorithm.cpp  circlealgorithm.h  clippingalgorithm.cpp  clippingalgorithm.h  curvealgorithm.cpp  curvealgorithm.h  ellipsealgorithm.cpp  fillingalgorithm.cpp  fillingalgorithm.h  fillingalgorithms .cpp  fillingalgorithms .h  icons8-mouse-50.cur  ids.h  linealgorithm.cpp  linealgorithm.h  main.cpp  project_2d_package.cbp  project_2d_package.depend  project_2d_package.layout
project_2d_package/include/: EllipseAlgorithm.h
project_2d_package/src/: EllipseAlgorithm.cpp
(+10 files in other folders)
